[Autofill] Fix metrics groups bug.

The case statement was missing a break.

Bug: 806934
Change-Id: I7e51f35a1e418439e7577e757fd5daf182d6c6a7
Reviewed-on: https://chromium-review.googlesource.com/891690
Reviewed-by: Roger McFarlane <rogerm@chromium.org>
Commit-Queue: Roger McFarlane <rogerm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532574}
Former-commit-id: 5617cbef1c007787026373eb7f136574f6cdf34e